# TDP2

./: CMakeLists.txt  README.md  test_sequentiel.c  util.h
src/: CMakeLists.txt  TDPConfig.h.cmake  datatype.h  driver.c  randomFile.c  testfilecreate.c  util.c  util.h
tests/: CMakeLists.txt  test_sequentiel.c
tests/data/: file_test.txt
